--- a/src/flavors/mansfield/config.yml
+++ b/src/flavors/mansfield/config.yml
@@ -13,8 +13,8 @@ map:
   geolocation_onload: false
   options:
     center:
-      lat: 39.9523524
-      lng: -75.1636075
+      lat: 41.788209
+      lng: -72.229614
     zoom: 14
     minZoom: 10
     maxZoom: 17
