--- a/src/flavors/mansfield/config.yml
+++ b/src/flavors/mansfield/config.yml
@@ -26,16 +26,18 @@ map:
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
 place_types:
-  Great Place:
+  Place you want to preserve:
     default: green_feature
     focused: green_focused
-  Comment:
+    label: _(place to preserve)
+  General comment:
     default: yellow_feature
     focused: yellow_focused
     label: _(comment on a place)
-  Problem Place:
+  Place you want to change:
     default: red_feature
     focused: red_focused
+    label: _(place to change)
 
 # Defines place icons. See http://leaflet.cloudmade.com/reference.html#icon
 # for documention of each property. Any omitted property will be undefined.
@@ -124,13 +126,13 @@ place:
       attrs:
         - key: placeholder
           value: _(Place Name)
-    - prompt: _(Location Type)
+    - prompt: _(Place Type)
       name: location_type
       type: select
       options:
-        - Great Place
-        - Problem Place
-        - Comment
+        - Place you want to change
+        - Place you want to preserve
+        - General comment
     - prompt: _(Description)
       type: textarea
       name: description
