--- a/src/flavors/mansfield/config.yml
+++ b/src/flavors/mansfield/config.yml
@@ -145,6 +145,7 @@ place:
       name: location_type
       type: select
       options:
+        - Please select
         - Place you want to preserve
         - Place you want to change
         - General comment
