--- a/src/flavors/mansfield/config.yml
+++ b/src/flavors/mansfield/config.yml
@@ -34,20 +34,23 @@ map:
         - condition: 'true'
           style:
             color: '#000'
-            opacity: 0.9
+            opacity: 0.4
             fillOpacity: 0
-            weight: 5
+            weight: 2
     - id: 'pdaboundary'
       url: '/static/layers/PDA.geojson'
       type: 'json'
       visible: true
+      legend: true,
       rules:
         - condition: 'true'
           style:
+            fillColor: '#996600'
             color: '#000'
-            opacity: 0.6
-            fillOpacity: 0
-            weight: 3
+            opacity: .2
+            dashArray: 5
+            fillOpacity: .3
+            weight: 1
 
 
 # The keys show up in the dropdown list when you are adding a new place
