test specialops flavor

--- a/src/flavors/specialops/config.yml
+++ b/src/flavors/specialops/config.yml
@@ -1,7 +1,7 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Mansfield Tomorrow | Mapping Places to Preserve and Change
+  title: Shareabouts Demo
   # Header name
   #name: Mansfield Tomorrow
   # Meta description that will show up in Google search results
