--- a/.dotcloud/config
+++ b/.dotcloud/config
@@ -1,6 +1,6 @@
 {
     "push_branch": null, 
-    "application": "mansfieldsa", 
-    "version": "0.9.4", 
+    "application": "specialops", 
+    "version": "0.9.7", 
     "push_protocol": "rsync"
 }
