--- a/src/flavors/eastcorridor/config.yml
+++ b/src/flavors/eastcorridor/config.yml
@@ -64,15 +64,15 @@ map:
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
 place_types:
-  Place you want to preserve:
+  Treasured:
     default: green_feature
     focused: green_focused
-    label: _(Treasured Places)
-  General comment:
+    label: _(Treasured)
+  Comment:
     default: yellow_feature
     focused: yellow_focused
-    label: _(comment on a place)
-  Place you want to change:
+    label: _(Comment)
+  Concern:
     default: red_feature
     focused: red_focused
     label: _(Concern)
@@ -146,7 +146,7 @@ activity:
   # Optional. Activity is supported by default. Set to false to disable.
   enabled: true
   # How often to refresh the activity list, in milliseconds.
-  interval: 30000
+  interval: 3000
 
 place:
   adding_supported: true
@@ -169,9 +169,9 @@ place:
       type: select
       options:
         - Please select
-        - Treasured Place
+        - Treasured
         - Concern
-        - General comment
+        - Comment
     - prompt: _(Description)
       type: textarea
       name: description
