--- a/src/flavors/eastcorridor/config.yml
+++ b/src/flavors/eastcorridor/config.yml
@@ -39,29 +39,29 @@ map:
             # opacity: 0.8
             # fillOpacity: 0
             #weight: 2
-    - id: 'stationbuffers'
-      url: '/static/layers/goldstationsbuffer.geojson'
-      type: 'json'
-      visible: true
-      rules:
-        - condition: 'true'
-          style:
-            color: '#f1c40f'
-            opacity: 0.4
-            fillOpacity: 0.25
-            weight: 2
-    - id: 'stations'
-      url: '/static/layers/goldstations.geojson'
-      type: 'json'
-      visible: true
-      rules:
-        - condition: 'true'
-          style:
-            color: '#f1c40f'
-            opacity: 0.9
-            fillOpacity: 0.8
-            weight: 0.2
-            radius: 3.5
+    # - id: 'stationbuffers'
+      # url: '/static/layers/goldstationsbuffer.geojson'
+      # type: 'json'
+      # visible: true
+      # rules:
+        # - condition: 'true'
+          # style:
+            # color: '#f1c40f'
+            # opacity: 0.4
+            # fillOpacity: 0.25
+            # weight: 2
+    # - id: 'stations'
+      # url: '/static/layers/goldstations.geojson'
+      # type: 'json'
+      # visible: true
+      # rules:
+        # - condition: 'true'
+          # style:
+            # color: '#f1c40f'
+            # opacity: 0.9
+            # fillOpacity: 0.8
+            # weight: 0.2
+            # radius: 3.5
  #East Corridor
     - id: 'eastline'
       url: '/static/layers/eastline1.geojson'
