--- a/src/flavors/eastcorridor/config.yml
+++ b/src/flavors/eastcorridor/config.yml
@@ -27,76 +27,76 @@ map:
     url: http://{s}.tiles.mapbox.com/v3/openplans.map-dmar86ym/{z}/{x}/{y}.png
     attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="http://mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>'
   layers:
-   #Gold Corridor          
-    # - id: 'goldline'
-      # url: '/static/layers/goldline.geojson'
-      # type: 'json'
-      # visible: true
-      # rules:
-        # - condition: 'true'
-          # style:
-            # color: '#f1c40f'
-            # opacity: 0.8
-            # fillOpacity: 0
-            #weight: 2
-    # - id: 'stationbuffers'
-      # url: '/static/layers/goldstationsbuffer.geojson'
-      # type: 'json'
-      # visible: true
-      # rules:
-        # - condition: 'true'
-          # style:
-            # color: '#f1c40f'
-            # opacity: 0.4
-            # fillOpacity: 0.25
-            # weight: 2
-    # - id: 'stations'
-      # url: '/static/layers/goldstations.geojson'
-      # type: 'json'
-      # visible: true
-      # rules:
-        # - condition: 'true'
-          # style:
-            # color: '#f1c40f'
-            # opacity: 0.9
-            # fillOpacity: 0.8
-            # weight: 0.2
-            # radius: 3.5
- #East Corridor
-    - id: 'eastline'
-      url: '/static/layers/eastline1.geojson'
+   Gold Corridor          
+    - id: 'goldline'
+      url: '/static/layers/goldline.geojson'
       type: 'json'
       visible: true
       rules:
         - condition: 'true'
           style:
-            color: '#e74c3c'
+            color: '#f1c40f'
             opacity: 0.8
             fillOpacity: 0
             weight: 2
     - id: 'stationbuffers'
-      url: '/static/layers/eastline_stationhalfmilebuffer.geojson'
+      url: '/static/layers/goldstationsbuffer.geojson'
       type: 'json'
       visible: true
       rules:
         - condition: 'true'
           style:
-            color: '#e74c3c'
-            opacity: 0.2
-            fillOpacity: 0.1
+            color: '#f1c40f'
+            opacity: 0.4
+            fillOpacity: 0.25
             weight: 2
     - id: 'stations'
-      url: '/static/layers/eaststations.geojson'
+      url: '/static/layers/goldstations.geojson'
       type: 'json'
       visible: true
       rules:
         - condition: 'true'
           style:
-            color: '#e74c3c'
+            color: '#f1c40f'
             opacity: 0.9
             fillOpacity: 0.8
             weight: 0.2
             radius: 3.5
+ East Corridor
+    # - id: 'eastline'
+      # url: '/static/layers/eastline1.geojson'
+      # type: 'json'
+      # visible: true
+      # rules:
+        # - condition: 'true'
+          # style:
+            # color: '#e74c3c'
+            # opacity: 0.8
+            # fillOpacity: 0
+            # weight: 2
+    # - id: 'stationbuffers'
+      # url: '/static/layers/eastline_stationhalfmilebuffer.geojson'
+      # type: 'json'
+      # visible: true
+      # rules:
+        # - condition: 'true'
+          # style:
+            # color: '#e74c3c'
+            # opacity: 0.2
+            # fillOpacity: 0.1
+            # weight: 2
+    # - id: 'stations'
+      # url: '/static/layers/eaststations.geojson'
+      # type: 'json'
+      # visible: true
+      # rules:
+        # - condition: 'true'
+          # style:
+            # color: '#e74c3c'
+            # opacity: 0.9
+            # fillOpacity: 0.8
+            # weight: 0.2
+            # radius: 3.5
 
 
 # The keys show up in the dropdown list when you are adding a new place
