--- a/src/flavors/eastcorridor/config.yml
+++ b/src/flavors/eastcorridor/config.yml
@@ -62,7 +62,7 @@ map:
             fillOpacity: 0.8
             weight: 0.2
             radius: 3.5
- East Corridor
+ #East Corridor
     # - id: 'eastline'
       # url: '/static/layers/eastline1.geojson'
       # type: 'json'
