--- a/src/flavors/walkdenver/config.yml
+++ b/src/flavors/walkdenver/config.yml
@@ -1,9 +1,9 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Pedx Denver
+  title: WALKscope Denver
   # Header name
-  name: Pedx Denver
+  name: WALKscope Denver
   # Meta description that will show up in Google search results
   meta_description: _(Shareabouts is a mapping tool to gather crowd sourced public input. Use it to collect suggested locations and comments in a social, engaging process.)
 
@@ -176,39 +176,18 @@ place:
         - key: required
 # Ped Count
     - prompt: _(How many people (excluding you) are currently on this street segment?)
-      type: select
-      options:
-        - label: _(Choose one)
-          value: ''
-        - label: _(0)
-          value: 0
-        - label: _(1)
-          value: 1
-        - label: _(2)
-          value: 2
-        - label: _(3)
-          value: 3
-        - label: _(4)
-          value: 4
-        - label: _(5)
-          value: 5
-        - label: _(6)
-          value: 6
-        - label: _(7)
-          value: 7
-        - label: _(8)
-          value: 8     
-        - label: _(8)
-          value: 8
-        - label: _(9)
-          value: 9
-        - label: _(10)
-          value: 10
-        - label: _(11+)
-          value: 11     
+      type: text
       name: num_peds
+      optional: false
+      attrs:
+        - key: placeholder
+          value: _(Email)
+        - key: size
+          value: 30  
       attrs:
         - key: required
+        - key: size
+          value: 4
     - prompt: _(What's the temperature like?)
       type: select
       options:
@@ -314,7 +293,7 @@ support:
 
 pages:
   - title: _(Instructions)
-    slug: about
+    slug: instructions
     name: overview
     start_page: true
 
@@ -324,7 +303,7 @@ pages:
 
   - title: _(Tips)
     slug: tips
-    url: /static/pages/rating.html
+    url: /static/pages/tips.html
 
   # - title: _(GitHub)
     # external: true
